# ignite

./: .DELL_ignite_db.json  .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
ignite/: __init__.py  __main__.py  cli.py  config.py  database.py  ignite.py
ignite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ignitex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_ignite.py
